<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emptytodo">Your to do list is empty, create a new one</string>
    <string name="newtodo">New ToDo</string>
    <string name="Priority">Priority </string>
    <string name="highpriority">High Priority</string>
    <string name="mediumpriority">Medium Priority</string>
    <string name="lowpriority">Low Priority</string>
    <string name="edittodo">Edit To Do</string>
    <string name="savechanges">Save Changes</string>
</resources>