<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="todo"
            type="com.ubaya.todoapp.model.Todo" />
        <variable
            name="radioListener"
            type="com.ubaya.todoapp.view.RadioClick" />
        <variable
            name="listener"
            type="com.ubaya.todoapp.view.TodoSaveChangesClick" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CreateToDoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtJudulToDo"
                style="@style/TextAppearance.MaterialComponents.Headline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/edittodo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="ToDo Title"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtJudulToDo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTitle"
                    android:text="@={todo.title}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="Enter Notes"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNotes"
                    android:text="@={todo.notes}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCreateToDo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                android:onClick=
                    "@{(view)->listener.onTodoSaveChangesClick(view,todo)}"

                android:text="@string/savechanges"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/Priority"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <RadioGroup
                android:id="@+id/radioGroupPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/radioHigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{todo.priority==3?true:false}"
                    android:onClick="@{(view)->radioListener.onRadioClick(view,3, todo)}"
                    android:tag="3"
                    android:text="@string/highpriority" />

                <RadioButton
                    android:id="@+id/radioMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{todo.priority==2?true:false}"
                    android:onClick="@{(view)->radioListener.onRadioClick(view,2, todo)}"
                    android:tag="2"
                    android:text="@string/mediumpriority" />

                <RadioButton
                    android:id="@+id/radioLow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{todo.priority==1?true:false}"
                    android:onClick="@{(view)->radioListener.onRadioClick(view,1, todo)}"
                    android:tag="1"
                    android:text="@string/lowpriority" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
